--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "lowdb sample for 1.125",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "jest"
   },
   "author": "abel@mit.edu",
@@ -15,7 +16,7 @@
     "firebase": "^9.6.10",
     "http-server": "^14.1.0",
     "lowdb": "^1.0.0",
-    "mongodb": "^3.7.3",
-    "node": "^16.9.1"
+    "method-override": "^3.0.0",
+    "mongodb": "^3.7.3"
   }
 }
